--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
+    "react-slugify": "^3.0.2",
     "react-uuid": "^2.0.0"
   }
 }
